# open-raffle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  setup.cfg
open_raffle/: asgi.py  settings.py  wsgi.py
raffle/: admin.py  apps.py  models.py
raffle/migrations/: 0001_initial.py
users/: admin.py  apps.py  managers.py  models.py
users/migrations/: 0001_initial.py
