[flake8]
exclude = .git,.tox,*/migrations/*
max-line-length = 89

[options]
python_requires = >= 3.4

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 89
multi_line_output = 5
skip = migrations
not_skip = __init__.py
known_third_party = rest_framework,dj_rest_auth,allauth
known_django = django
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[mypy]
ignore_missing_imports = true

[mypy.*.migrations.*]
ignore_errors = true
